	(CygbuildMakefileRunInstallPythonDistutilsStop): New.
	(CygbuildMakefileRunInstallPythonMain): Add support for installing
	libraries that use *.pth. Requires custom ~/.pydistutils.cfg
	and PYTHONPATH.
	(CygbuildIsPythonLibrary): New.
	(CygbuildCygDirCheck): Tim leading path in displayed warning
	message.
	(CygbuildDefineGlobalMain): instead of PK-VER install to
	PKG (DIR_DOC_GENERAL).

2010-06-22  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh:
	(CygbuildCmdInstallCheckSetupHintDependExists) correct library
	handllinga which contains special regexp characters, like in
	libstdc++

	* bin/lib/cygbuild.pl (FileScanWantedGeneral): Replace $MATCH
	with $1.
	(HELP::OPTIONAL EXTERNAL FILES): Document new file install.lst

	* bin/cygbuild.sh: (CygbuildCommandMain): Make 's' optional in
	'mkdir' command.
	(CygbuildCmdInstallList): New. Add support for install.lst
	control file.
	(CygbuildCmdInstallMain): Call `CygbuildCmdInstallList'.
	(CygbuildDefineGlobalMain): Add SCRIPT_INSTALL_LST_CYGFILE.
	(CygbuildDllToLibName): add libgcc_s1.
	(CygbuildCygcheckLibraryDepSetup): correct library handlling
	which contains special regexp characters, like in libstdc++
	(CygbuildCygcheckLibraryDepReadme): correct library handlling
	which contains special regexp characters, like in libstdc++
	(CygbuildInstallExtraManual): Allow also CYGWIN-PATCHES/man
	directory.
	(CygbuildCmdDownloadUpstream): Correct pwget option from --Tag
	to --tag.

2010-06-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildGPGsignFiles): don't return error on memory lock warning.
	(CygbuildCmdMkpatchMain): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildCmdDownloadCygwinPackage): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallPackageDocs): Add
	--no-same-owner --no-same-permissions to tar extract call.
	(CygbuildInstallFixDocdirInstall): Add
	--no-same-owner --no-same-permissions to tar extract call.